2017-05-29  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-673

	* Some change of plans, revision started.

	* src/m_cloudradar.cc (psdMH97): Rewritten to handle new set of
	WSVs, treating multiple points.

	* src/workspace.cc: Modified or having new names are
	dpnd_data_dx, dpnd_data_dx_names, particle_bulkprop_field,
	pnd_agenda_input, pnd_agenda_input_names, pnd_data
	dpsd_data_dx, psd_data and dpnd_field_dx.

2017-05-29  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-672

	* CMakelists.txt: Correctly disable OEM if C++11 is unavailable.

2017-05-29 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-671

	* src/rt4.cc,h, m_rt4.cc (run_rt4):
	Debugging.

	* src/methods.cc (DisortCalcwithARTSSurface, RT4Calc):
	Spelling fixes in doc.

	* controlfiles/planetary_toolbox/demos/common/DemoMarsClouds1D.arts:
	Long-done doc corrections.

2017-05-29  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-670

	* Continued work on the stuff started in my last commits.

	* src/workspace.cc: Added also particle_bulkprop and particle_bulkprop_names.

2017-05-28  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-669

	* src/m_cloudradar.cc (pndFromPSD, psdMH97): Started.

	* Added some variables for moving towards tests of scattering
	jacobians. So far just handling one scattering species, and
	temporary naming and no documentation text written. pnd_agenda is
	now defined to cover one point, but it should be consider to
	instead let it cover multiple points to decrease the overhead due
	to repeated checks.

	* src/agendas.cc: Added pnd_agenda.

	* src/workspace.cc: Added dpnd_dx, dpsd_dx, pnd_agenda, pnd,
	pnd_input, pnd_input_names, psd and psd_grid.

2017-05-26  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-668

	* More work on scattering jacobians.

	* src/m_rte.cc (iyEmissionStandard): Introduced new variables and
	adopted call of get_pointers_for_analytical_jacobians.
