@@ -205,6 +205,86 @@ void xml_write_to_stream(ostream&                        os_xml,
 }
 
 
+//=== ArrayOfArrayOfString ==========================================================
+
+//! Reads ArrayOfArrayOfString from XML input stream
+/*!
+  \param is_xml   XML Input stream
+  \param aastring  ArrayOfArrayOfString return value
+  \param pbifs    Pointer to binary input stream. NULL in case of ASCII file.
+*/
+void xml_read_from_stream(istream&              is_xml,
+                          ArrayOfArrayOfString& aastring,
+                          bifstream*            pbifs,
+                          const Verbosity&      verbosity)
+{
+  ArtsXMLTag tag(verbosity);
+  Index nelem;
+
+  tag.read_from_stream(is_xml);
+  tag.check_name("Array");
+
+  tag.check_attribute("type", "Array");
+
+  tag.get_attribute_value("nelem", nelem);
+  aastring.resize(nelem);
+
+  Index n;
+  try
+    {
+      for (n = 0; n < nelem; n++)
+        xml_read_from_stream(is_xml, aastring[n], pbifs, verbosity);
+    }
+  catch (runtime_error e)
+    {
+      ostringstream os;
+      os << "Error reading ArrayOfArrayOfString: "
+         << "\n Element: " << n
+         << "\n" << e.what();
+      throw runtime_error(os.str());
+    }
+
+  tag.read_from_stream(is_xml);
+  tag.check_name("/Array");
+}
+
+
+//! Writes ArrayOfArrayOfString to XML output stream
+/*!
+  \param os_xml   XML Output stream
+  \param aastring  ArrayOfArrayOfString
+  \param pbofs    Pointer to binary file stream. NULL for ASCII output.
+  \param name     Optional name attribute
+*/
+void xml_write_to_stream(ostream&                    os_xml,
+                         const ArrayOfArrayOfString& aastring,
+                         bofstream*                  pbofs,
+                         const String&               name,
+                         const Verbosity&            verbosity)
+{
+  ArtsXMLTag open_tag(verbosity);
+  ArtsXMLTag close_tag(verbosity);
+
+  open_tag.set_name("Array");
+  if (name.length())
+    open_tag.add_attribute("name", name);
+
+  open_tag.add_attribute("type", "Array");
+  open_tag.add_attribute("nelem", aastring.nelem());
+
+  open_tag.write_to_stream(os_xml);
+  os_xml << '\n';
+
+  for (Index n = 0; n < aastring.nelem(); n++)
+    xml_write_to_stream(os_xml, aastring[n], pbofs, "", verbosity);
+
+  close_tag.set_name("/Array");
+  close_tag.write_to_stream(os_xml);
+
+  os_xml << '\n';
+}
+
+
 //=== ArrayOfPpath =========================================================
 
 //! Reads ArrayOfPpath from XML input stream
