@@ -104,6 +104,7 @@ TMPL_XML_READ_WRITE(ArrayOfArrayOfMatrix)
 TMPL_XML_READ_WRITE(ArrayOfArrayOfScatteringMetaData)
 TMPL_XML_READ_WRITE(ArrayOfArrayOfSingleScatteringData)
 TMPL_XML_READ_WRITE(ArrayOfArrayOfSpeciesTag)
+TMPL_XML_READ_WRITE(ArrayOfArrayOfString)
 TMPL_XML_READ_WRITE(ArrayOfArrayOfTensor3)
 TMPL_XML_READ_WRITE(ArrayOfArrayOfTensor6)
 TMPL_XML_READ_WRITE(ArrayOfArrayOfVector)
