@@ -123,6 +123,7 @@ TMPL_XML_READ_WRITE_STREAM(ArrayOfArrayOfMatrix)
 TMPL_XML_READ_WRITE_STREAM(ArrayOfArrayOfScatteringMetaData)
 TMPL_XML_READ_WRITE_STREAM(ArrayOfArrayOfSingleScatteringData)
 TMPL_XML_READ_WRITE_STREAM(ArrayOfArrayOfSpeciesTag)
+TMPL_XML_READ_WRITE_STREAM(ArrayOfArrayOfString)
 TMPL_XML_READ_WRITE_STREAM(ArrayOfArrayOfTensor3)
 TMPL_XML_READ_WRITE_STREAM(ArrayOfArrayOfTensor6)
 TMPL_XML_READ_WRITE_STREAM(ArrayOfArrayOfVector)
