@@ -1,3 +1,12 @@
+2017-05-30  Oliver Lemke  <olemke@core-dump.info>
+
+	* arts-2-3-674
+
+	* src/groups.cc, src/mystring.h, src/xml_io_array_types.cc,
+	src/xml_io_instantiation.h, src/xml_io_types.h:
+
+	Implemented WSV group type ArrayOfArrayOfString.
+
 2017-05-29  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
 	* arts-2-3-673
